# mestrado-cana

./: .gitignore  README.md  pyproject.toml
alg-gulosos/: sol_Lista_02_alg_gul.tex
div-conq/: majority.py  msort.py  sol_Lista_01_div_conq.tex
listas/alg-gulosos/: sol_Lista_02_alg_gul.tex
listas/div-conq/: sol_Lista_01_div_conq.tex
src/cana/: __init__.py  feedback.py  fib.py  graphs.py  inversion.py  majority.py  msort.py  spanning_trees.py
tests/cana/: conftest.py  feedback_test.py  fib_test.py  graphs_test.py  inversion_test.py  majority_test.py  msort_test.py  spanning_trees_test.py
tests/cana/resources/: graph.yaml
